2005-08-26  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	Tweak for people that try to compile without-x
	* libmb/mbexp.c: (_clip_some_text), (mb_font_render_simple):
	Dont put ellipses right after a space

2005-04-28  mallum,,,  <mallum@openedhand.com>

	reviewed by: <delete if not using a buddy>

	* ChangeLog:
	* configure.ac:

2005-04-16  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	Check for AC_PATH_XTRA fail.

2005-04-08 Release 1.7

2005-04-08  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	* libmb/Makefile.am:
	Bump up version to 1.7

2005-03-30  mallum,,,  <mallum@openedhand.com>

	* libmb/mbpixbuf.c: (_load_xpm_file):
	Fix potential overflow in xmp loader. via Andreas Gunnarsson.

2005-03-29  mallum,,,  <mallum@openedhand.com>

	* libmb/mbdotdesktop.c: (_parse_desktop_entry):
	Fix pontential overflow by 1 in scanf call.
	* libmb/mbutil.c:
	Ditch alloca.h include.
	Fixes via ML post from Andreas Gunnarsson

2005-03-16  mallum,,,  <mallum@openedhand.com>

	* Makefile.am:
	* configure.ac:
	* tests/Makefile.am:
	* tests/menu/Makefile.am:
	Add tests/menu to dist and make sure make dist includes it.

2005-03-16  mallum,,,  <mallum@openedhand.com>

	* libmb/hash.c:
	* libmb/mbdotdesktop.c:
	* libmb/mbexp.c:
	* libmb/mbmenu.c:
	* libmb/mbpixbuf.c:
	* libmb/mbtray.c:
	* libmb/mbutil.c:
	Add _GNU_SOURCE define to fix -DXOPEN_SOURCE issues.

2005-03-07  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am:
	Add oh.h to pixbuf_SOURCES.

2005-02-22  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
        move AC_CONFIG_AUX_DIR above AM_INIT_AUTOMAKE

2005-02-22  mallum,,,  <mallum@openedhand.com>

	* libmb/mbtray.c: (get_xevent_timed):
	Make timeouts work more correctly. Fixes bug with large timeouts
	never getting called like with the clock applet.

2005-01-24  1.6 Released

2005-01-24  mallum,,,  <mallum@openedhand.com>

	* libmb/Makefile.am:
	* libmb/mbexp.c:
	Bump up soname. add a comment to mbexp.c
