@@ -1,3 +1,9 @@
+2005-09-26  mallum  <mallum@openedhand.com>
+
+	* libmb/mbexp.c: (mb_font_new), (mb_font_set_from_string),
+	(mb_font_new_from_string):
+	Safely handle a misconfigured Pango.
+
 2005-08-26  mallum,,,  <mallum@openedhand.com>
 
 	* configure.ac:
